# C.R.E.A.M.

./: .gitignore  Anchor.toml  COMPLETE_SETUP.md  Cargo.toml  FINAL_SUMMARY.txt  FRONTEND_STAGING.md  GETTING_STARTED.txt  IMPLEMENTATION_COMPLETE.md  INDEX.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  README.txt  SETUP.md  STAGING_COMPLETE.txt  package.json  tsconfig.json
app/: README.md
app/frontend/: ACTION_FLOW_DIAGRAM.md  FRONTEND_DOCUMENTATION.md  QUICK_REFERENCE.md  README.md  README_FRONTEND.md  next.config.js  package-lock.json  package.json  tailwind.config.js
app/frontend/app/: layout.tsx  page.tsx
app/frontend/app/app/: page.tsx
app/frontend/app/app/create/: page.tsx
app/frontend/app/app/vault/[id]/: page.tsx
app/frontend/app/fund/[id]/: page.tsx
app/frontend/app/profile/[trader]/: page.tsx
app/frontend/components/: app-header.tsx  create-fund-modal.tsx  header.tsx  hero.tsx  mobile-menu.tsx  vault-card.tsx
app/frontend/components/gl/: index.tsx  particles.tsx
app/frontend/components/gl/shaders/: pointMaterial.ts
app/frontend/components/ui/: button.tsx
app/frontend/utils/: performance-fee.ts
programs/hedge_vault/: Cargo.toml
programs/hedge_vault/src/: jupiter.rs  lib.rs  twitter.rs
scripts/: deploy.sh
tests/: hedge-vault.ts
