[package]
name = "hedge_vault"
version = "0.1.0"
description = "Epoch-based hedge vault with Jupiter integration and Twitter auth"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "hedge_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.0"
anchor-spl = "0.30.0"
solana-program = "~1.18.0"
sha2 = "0.10.8"
hex = "0.4.3"

